# questions

./: .env.example  .prettierignore  .prettierrc  AGENTS.md  Makefile  README.md  compose.prod.yml  compose.yml
.docs/: README.md  (+4 more)
apps/server/: Cargo.toml  Dockerfile
apps/server/config/: config.toml
apps/server/config/migrations/: 20260109193407_users.sql  20260109193408_courses.sql  20260325121500_create-quizzes.sql  20260420110000_add-question-count-to-quizzes.sql  20260424022442_question-banks.sql  20260424023510_quizzes.sql  20260424030519_attempts.sql  20260424055316_soft-delete-triggers.sql
apps/server/src/: logger.rs  macros.rs  main.rs
apps/server/src/attempts/: controller.rs  dtos.rs  entity.rs  errors.rs  mod.rs  policy.rs  repository.rs  service.rs
apps/server/src/attempts/services/: grading.rs  mod.rs  questions.rs
apps/server/src/auth/: controller.rs  interceptor.rs  mod.rs
apps/server/src/authz/: errors.rs  interceptor.rs  mod.rs  service.rs
apps/server/src/banks/: controller.rs  dtos.rs  entity.rs  errors.rs  mod.rs  policy.rs  repository.rs  service.rs  views.rs
apps/server/src/courses/: controller.rs  dtos.rs  entity.rs  errors.rs  mod.rs  repository.rs  views.rs
apps/server/src/quizzes/: controller.rs  dtos.rs  entity.rs  errors.rs  mod.rs  repository.rs  service.rs  views.rs
apps/server/src/shared/: database.rs  errors.rs  id.rs  mod.rs
apps/server/src/snapshots/: entity.rs  mod.rs  repository.rs  service.rs
apps/server/src/users/: controller.rs  dtos.rs  entity.rs  errors.rs  mod.rs  policy.rs  repository.rs  service.rs
(+69 files in other folders)
