[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Luciano Revillod"]

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
sword = { git = "https://github.com/sword-web/sword.git", features = [
    "web",
    "validation-validator",
] }

uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
validator = { version = "0.20.0", features = ["derive"] }

sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.8", features = ["trace", "tracing"] }

thiserror = "2.0.17"
ldap3 = { version = "0.12.1", features = ["tls"] }

sha2 = "0.10.9"
rand = "0.10.0"
bon = "3.9.1"
strum_macros = "0.28.0"
filterstruct = "0.1.0"
